# slurm-gpus

./: README.md  pyproject.toml  setup.py  slurm-gpus.py
slurm_gpus/: __init__.py  __main__.py  core.py
slurm_gpus.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
