[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "slurm-gpus"
version = "0.1.0"
description = "A tool to list availability of GPUs on your SLURM cluster"
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
authors = [
    {name = "Original Author", email = "author@example.com"}
]
keywords = ["slurm", "gpu", "cluster", "hpc"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: System :: Clustering",
    "Topic :: System :: Monitoring",
]
dependencies = [
    "rich>=10.0.0",
]

[project.urls]
Homepage = "https://github.com/original-author/slurm-gpus"
Repository = "https://github.com/original-author/slurm-gpus"

[project.scripts]
slurm-gpus = "slurm_gpus.core:main"

[tool.black]
line-length = 88
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3